Vibration system, new ResonanceForkItem and updated resonance capability

--- a/src/main/resources/assets/kims_artifacts/lang/en_us.json
+++ b/src/main/resources/assets/kims_artifacts/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "curios.identifier.artifacts": "Artifact",
-  "item.kims_artifacts.smr": "Shoulder-Mounted Railgun"
-
-
+  "item.kims_artifacts.smr": "Shoulder-Mounted Railgun",
+  "item.kims_artifacts.resonance_fork": "Resonating Fork",
+  "item.kims_artifacts.test": "Testitem"
 }
