Basic working + synced potion mixing

--- a/src/main/resources/assets/kims_artifacts/lang/en_us.json
+++ b/src/main/resources/assets/kims_artifacts/lang/en_us.json
@@ -2,5 +2,53 @@
   "curios.identifier.artifacts": "Artifact",
   "item.kims_artifacts.smr": "Shoulder-Mounted Railgun",
   "item.kims_artifacts.resonance_fork": "Resonating Fork",
-  "item.kims_artifacts.test": "Testitem"
+  "item.kims_artifacts.test": "Testitem",
+
+
+
+  "potion.potency.6": "VI",
+  "potion.potency.7": "VII",
+  "potion.potency.8": "VIII",
+  "potion.potency.9": "IX",
+  "potion.potency.10": "X",
+  "potion.potency.11": "XI",
+  "potion.potency.12": "XII",
+  "potion.potency.13": "XIII",
+  "potion.potency.14": "XIV",
+  "potion.potency.15": "XV",
+  "potion.potency.16": "XVI",
+  "potion.potency.17": "XVII",
+  "potion.potency.18": "XVIII",
+  "potion.potency.19": "XIX",
+  "potion.potency.20": "XX",
+  "potion.potency.21": "XXI",
+  "potion.potency.22": "XXII",
+  "potion.potency.23": "XXIII",
+  "potion.potency.24": "XXIV",
+  "potion.potency.25": "XXV",
+  "potion.potency.26": "XXVI",
+  "potion.potency.27": "XXVII",
+  "potion.potency.28": "XXVIII",
+  "potion.potency.29": "XXIX",
+  "potion.potency.30": "XXX",
+  "potion.potency.31": "XXXI",
+  "potion.potency.32": "XXXII",
+  "potion.potency.33": "XXXIII",
+  "potion.potency.34": "XXXIV",
+  "potion.potency.35": "XXXV",
+  "potion.potency.36": "XXXVI",
+  "potion.potency.37": "XXXVII",
+  "potion.potency.38": "XXXVIII",
+  "potion.potency.39": "XXXIX",
+  "potion.potency.40": "XL",
+  "potion.potency.41": "XLI",
+  "potion.potency.42": "XLII",
+  "potion.potency.43": "XLIII",
+  "potion.potency.44": "XLIV",
+  "potion.potency.45": "XLV",
+  "potion.potency.46": "XLVI",
+  "potion.potency.47": "XLVII",
+  "potion.potency.48": "XLVIII",
+  "potion.potency.49": "XLIX",
+  "potion.potency.50": "L"
 }
