Hardcoded potion bag recipe tweaks

--- a/src/main/resources/assets/kims_artifacts/lang/en_us.json
+++ b/src/main/resources/assets/kims_artifacts/lang/en_us.json
@@ -1,8 +1,9 @@
 {
   "curios.identifier.artifacts": "Artifact",
   "item.kims_artifacts.smr": "Shoulder-Mounted Railgun",
-  "item.kims_artifacts.resonance_fork": "Resonating Fork",
   "item.kims_artifacts.test": "Testitem",
+  "item.kims_artifacts.potion_bag": "Alchemical Bag",
+
 
 
 
