--- a/bin/main/assets/kims_artifacts/lang/en_us.json
+++ b/bin/main/assets/kims_artifacts/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.kims_artifacts.test": "Testitem",
   "item.kims_artifacts.potion_bag": "Alchemical Bag",
   "item.kims_artifacts.concoction": "Concoction",
+  "item.kims_artifacts.lingering_concoction": "Lingering Concoction",
 
   "container.kims_artifacts.potion_bag": "Alchemical Bag",
 
